feat: implement DTO pattern across all controllers and services
Implement comprehensive DTO (Data Transfer Object) pattern to improve API design and separation of concerns:

- Created 25 DTO classes for request/response handling
- Implemented 7 mapper classes for entity-to-DTO conversion
- Updated all controllers to use DTOs with validation
- Refactored all services to accept RequestDTOs and return ResponseDTOs
- Added ResponseEntity for consistent API responses

DTOs created:
- Authentication: LoginRequestDTO, LoginResponseDTO, RegisterRequestDTO
- Students: StudentRequestDTO, StudentResponseDTO, StudentSummaryResponseDTO
- Teachers: TeacherRequestDTO, TeacherResponseDTO
- Classrooms: ClassroomRequestDTO, ClassroomResponseDTO, ClassroomWithStudentsResponseDTO
- Grades: GradeRequestDTO, GradeResponseDTO, ReportCardResponseDTO
- Attendance: AttendanceRequestDTO, AttendanceResponseDTO
- Events: EventRequestDTO, EventResponseDTO
- Reports: ReportResponseDTO

Mappers implemented:
- StudentMapper, TeacherMapper, ClassroomMapper
- GradeMapper, AttendanceMapper, EventMapper, ReportCardMapper

Controllers updated:
- StudentController, TeacherController, ClassroomController
- GradeController, AttendanceController, EventController

Services refactored:
- StudentService, TeacherService, ClassroomService
- GradeService, AttendanceService, EventService

All changes tested and verified with successful application startup.